@@ -22,6 +22,7 @@ Thanks!
 - Re-enable Tiger-only features and eliminate warnings in log.
 - Fix bug: don't rename when clicking on grayed-out folder.
 - Show article list tab when clicking on folders list.
+- Allow dragging of Trash folder.
 
 2.1.0.2103
 ----------
